--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -37,7 +37,17 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="main-bar">
                             <ul class="nav navbar-nav">
-                                <li><a ui-sref="evento">Evento</a></li>
+                                <li><a ui-sref="evento">Ayuda</a></li>
+                            </ul>
+                        </div> <!-- /.navbar-collapse -->
+                        <div class="collapse navbar-collapse" id="main-bar">
+                            <ul class="nav navbar-nav">
+                                <li><a ui-sref="evento">Registrarse</a></li>
+                            </ul>
+                        </div> <!-- /.navbar-collapse -->
+                        <div class="collapse navbar-collapse" id="main-bar">
+                            <ul class="nav navbar-nav">
+                                <li><a ui-sref="evento"></a>Iniciar Sesion</li>
                             </ul>
                         </div> <!-- /.navbar-collapse -->
                     </div> <!-- /.container-fluid -->
