fondo y solucion errores

--- a/punajut/src/main/webapp/src/evento/PainaDeInicio.html
+++ b/punajut/src/main/webapp/src/evento/PainaDeInicio.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>GotravelSW</title>
+    <title>Gotravel</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../resources/css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
     <link href="../../resources/css/signin.css" rel="stylesheet">
 
   </head>
-  <body>
+  <body background="w3s.png">
 
 
     <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
@@ -184,16 +184,16 @@
           <h2 class="form-signin-heading">Please Sign Up</h2>
 
           <label for="inputNickname" class="sr-only">nickname</label>
-          <input type="nickname" id="inputNickname" class="form-control" placeholder="nickname" required>
+          <input type="text" id="inputNickname" class="form-control" placeholder="nickname" required>
 
           <label for="inputname" class="sr-only">name</label>
-          <input type="name" id="inputname" class="form-control" placeholder="name" required>
+          <input type="text" id="inputname" class="form-control" placeholder="name" required>
 
           <label for="inputlastname" class="sr-only">lastname</label>
-          <input type="lastname" id="inputlastname" class="form-control" placeholder="lastname" required>
+          <input type="text" id="inputlastname" class="form-control" placeholder="lastname" required>
 
           <label for="inputinfo" class="sr-only">info</label>
-          <input type="info" id="inputinfo" class="form-control" placeholder="tell us something about you" required>
+          <input type="text" id="inputinfo" class="form-control" placeholder="tell us something about you" required>
 
           <label for="inputEmail" class="sr-only">Email address</label>
           <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
