Primer borrador de vista de continentes y de paises(solo europa)

--- a/punajut/src/main/webapp/src/evento/verContinentes.html
+++ b/punajut/src/main/webapp/src/evento/verContinentes.html
@@ -71,7 +71,7 @@ and open the template in the editor.
                             <ul class="dropdown-menu">
                                 <li><a href="#">Itinerario 1</a></li>
                                 <li><a href="#">Itinerario 2</a></li>
-                                <li><a href="#">Itinerario 3 jashb</a></li>
+                                <li><a href="#">Itinerario 3</a></li>
                             </ul>
                         </li>
                     </ul>
