Correcciones en itinerarios.html

--- a/punajut/src/main/webapp/src/evento/itinerarios.html
+++ b/punajut/src/main/webapp/src/evento/itinerarios.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Go travel</title>
+  <title>GoTravel</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -41,6 +41,7 @@
     }
   </style>
 </head>
+
 <body>
 
 <nav class="navbar navbar-inverse">
@@ -137,14 +138,6 @@
         <img src="https://civitatis.cachefly.net/guias/nuevayork/fotos/nueva-york.jpg" alt="Nueva York" style="width:128px;height:128px;">
         </a>
     </div>
-    </div>
-    <div class="col-sm-2 sidenav">
-      <div class="well">
-        <p>ADS</p>
-      </div>
-      <div class="well">
-        <p>ADS</p>
-      </div>
     </div>
   </div>
 </div>
