itinerarios.html alert cuando se presiona una imagen

--- a/punajut/src/main/webapp/src/evento/itinerarios.html
+++ b/punajut/src/main/webapp/src/evento/itinerarios.html
@@ -129,17 +129,23 @@
       <div class="col-sm-3">
       <h3>Itinerario 1</h3>
       <a href="http://www.enter.co">
-        <img src="https://civitatis.cachefly.net/guias/londres/fotos/londres.jpg" alt="Londres" style="width:250px;height:250px;">
+        <img src="https://civitatis.cachefly.net/guias/londres/fotos/londres.jpg" alt="Londres" style="width:150px;height:150px;" onclick="nuevaPagina()">
         </a>
     </div>
     <div class="col-sm-3">
       <h3>Itinerario 2</h3>
       <a href="http://www.enter.co">
-        <img src="https://civitatis.cachefly.net/guias/nuevayork/fotos/nueva-york.jpg" alt="Nueva York" style="width:250px;height:250px;">
+        <img src="https://civitatis.cachefly.net/guias/nuevayork/fotos/nueva-york.jpg" alt="Nueva York" style="width:150px;height:150px;">
         </a>
     </div>
     </div>
   </div>
 </div>
+
+        <script>
+function nuevaPagina() {
+    alert("¿Quieres cargar el itinerario 1?")
+}
+</script>
 </body>
 </html>
