se agregaron alerts cuando se presiona una imagen en itinerarios.html

--- a/punajut/src/main/webapp/src/evento/itinerarios.html
+++ b/punajut/src/main/webapp/src/evento/itinerarios.html
@@ -128,23 +128,23 @@
       <!-- Itinerarios -->
       <div class="col-sm-3">
       <h3>Itinerario 1</h3>
-      <a href="http://www.enter.co">
-        <img src="https://civitatis.cachefly.net/guias/londres/fotos/londres.jpg" alt="Londres" style="width:150px;height:150px;" onclick="nuevaPagina()">
-        </a>
+        <img id="itinerario1" src="https://civitatis.cachefly.net/guias/londres/fotos/londres.jpg" alt="Londres" style="width:150px;height:150px;" onclick="nuevaPagina1()">
     </div>
     <div class="col-sm-3">
       <h3>Itinerario 2</h3>
-      <a href="http://www.enter.co">
-        <img src="https://civitatis.cachefly.net/guias/nuevayork/fotos/nueva-york.jpg" alt="Nueva York" style="width:150px;height:150px;">
-        </a>
+        <img id="itinerario2" src="https://civitatis.cachefly.net/guias/nuevayork/fotos/nueva-york.jpg" alt="Nueva York" style="width:150px;height:150px;" onclick="nuevaPagina2()">
     </div>
     </div>
   </div>
 </div>
 
-        <script>
-function nuevaPagina() {
-    alert("¿Quieres cargar el itinerario 1?")
+<script>
+function nuevaPagina1() {
+    alert("¿Quieres cargar el itinerario 1?");
+}
+
+function nuevaPagina2() {
+    alert("¿Quieres cargar el itinerario 1?");
 }
 </script>
 </body>
