onclick function itinerarios.html

--- a/punajut/src/main/webapp/src/evento/itinerarios.html
+++ b/punajut/src/main/webapp/src/evento/itinerarios.html
@@ -142,15 +142,27 @@
 function nuevaPagina1() {
     var opcion=prompt("¿Qué quieres hacer con el itinerario 1? Editar:0, Eliminar:1");
 
-    if(opcion==1)
+    if(opcion==0)
     {
-        document.getElementById("itinerario1").innerHTML("BLANK");
+        alert("Editar imagen");
+    }
+    else
+    {
+        alert("Eliminar imagen");
     }
 }
 
 function nuevaPagina2() {
-    alert("¿Quieres cargar el itinerario 2?");
-}
+var opcion=prompt("¿Qué quieres hacer con el itinerario 2? Editar:0, Eliminar:1");
+
+    if(opcion==0)
+    {
+        alert("Editar imagen");
+    }
+    else
+    {
+        alert("Eliminar imagen");
+    }}
 </script>
 </body>
 </html>
