- Agregadas Imagenes para la aprte de comunidad - Agregada la barra lateral de usuario

--- a/punajut/src/main/webapp/src/itinerario/verContinentes.html
+++ b/punajut/src/main/webapp/src/itinerario/verContinentes.html
@@ -199,6 +199,7 @@ and open the template in the editor.
                         </div>
                     </div>
                 </div>
+            </div>
         </nav>
     </body>
 </html>
