+ Agregadas Imagenes para la aprte de comunidad + Agregada la barra lateral de usuario -Corregir las dependencias de la barra lateral de usuario -Corregir las rutas de las imagenes. No se estan mostrando

--- a/punajut/src/main/webapp/src/comunidad/comunidad.tpl.html
+++ b/punajut/src/main/webapp/src/comunidad/comunidad.tpl.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
 
-	<div class="col-md-6 showcase">
+    <div class="col-md-6 showcase" style="display: inline-block">
             <h2>Comunidad<br><small>¡Explora lo que han hecho los demás!</small></h2>
             <hr>
 	  	<div id="slideshow" class="carousel slide col-md-6" data-ride="carousel" data-interval="3500">
@@ -79,7 +79,7 @@
 	  	<!-- Wrappers for sliders-->
 	  	<div class="carousel-inner" role="listbox">
 	  		<div class="item active">
-	  			<img class="itershow" src=".\Web Pages\resources\imagenes\img_comunidad\paris.jpg" alt="Paris" align="middle">
+	  			<img class="itershow" src="./Web Pages/resources/imagenes/img_comunidad/paris.jpg" alt="Paris" align="middle">
 	  			<div class="carousel-caption">
 	  				<h4 class="city">París</h4>
 	  			</div>
