+Se corrige las dependencias e importaciones de explore.tpl.html

--- a/punajut/src/main/webapp/src/comunidad/explore.tpl.html
+++ b/punajut/src/main/webapp/src/comunidad/explore.tpl.html
@@ -5,16 +5,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="estilo.css">
+  <link rel="stylesheet" type="text/css" href="../../resources/css/com_expl.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
 <body>
 
-  <h2>Comunidad<br><small>¡Explora lo que han hecho los demás!</small></h2>
-<hr>
 <div class="container">
+
+  <h2>Comunidad<br><small>¡Explora lo que han hecho los demás!</small></h2>
+  <hr>
   <div class="row" style="display: inline">
   <!--Row 1-->
   	<div class="carousel slide col-lg-4 iter" data-ride="carousel" data-interval="3000">
@@ -29,7 +30,7 @@
   	<div class="carousel-inner" role="listbox">
   		<div class="item active">
   			<a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/paris.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/paris.jpg" alt="Paris" align="middle">
     			<div class="carousel-caption">
     				<h4 class="city">París</h4>
     			</div>
@@ -38,7 +39,7 @@
 
   		<div class="item">
   			<a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/london.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/london.jpg" alt="Paris" align="middle">
     			<div class="carousel-caption">
     				<h4 class="city">Londres</h4>
     			</div>
@@ -47,7 +48,7 @@
 
   		<div class="item">
   			<a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/chile.jpg" alt="Chile ctm" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/chile.jpg" alt="Chile ctm" align="middle">
     			<div class="carousel-caption">
     				<h4 class="city">Chile CTM!</h4>
     			</div>
@@ -56,7 +57,7 @@
 
   		<div class="item">
   			<a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/bronx.jpg" alt="Bronx" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/bronx.jpg" alt="Bronx" align="middle">
     			<div class="carousel-caption">
     				<h4 class="city">Bronx</h4>
     			</div>
@@ -78,7 +79,7 @@
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/paris.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/paris.jpg" alt="Paris" align="middle">
           <div class="carousel-caption">
             <h4 class="city">París</h4>
           </div>
@@ -87,7 +88,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/london.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/london.jpg" alt="Paris" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Londres</h4>
           </div>
@@ -96,7 +97,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/chile.jpg" alt="Chile ctm" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/chile.jpg" alt="Chile ctm" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Chile CTM!</h4>
           </div>
@@ -105,7 +106,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/bronx.jpg" alt="Bronx" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/bronx.jpg" alt="Bronx" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Bronx</h4>
           </div>
@@ -127,7 +128,7 @@
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/paris.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/paris.jpg" alt="Paris" align="middle">
           <div class="carousel-caption">
             <h4 class="city">París</h4>
           </div>
@@ -136,7 +137,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/london.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/london.jpg" alt="Paris" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Londres</h4>
           </div>
@@ -145,7 +146,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/chile.jpg" alt="Chile ctm" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/chile.jpg" alt="Chile ctm" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Chile CTM!</h4>
           </div>
@@ -154,7 +155,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/bronx.jpg" alt="Bronx" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/bronx.jpg" alt="Bronx" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Bronx</h4>
           </div>
@@ -176,7 +177,7 @@
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/paris.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/paris.jpg" alt="Paris" align="middle">
           <div class="carousel-caption">
             <h4 class="city">París</h4>
           </div>
@@ -185,7 +186,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/london.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/london.jpg" alt="Paris" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Londres</h4>
           </div>
@@ -194,7 +195,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/chile.jpg" alt="Chile ctm" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/chile.jpg" alt="Chile ctm" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Chile CTM!</h4>
           </div>
@@ -203,7 +204,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/bronx.jpg" alt="Bronx" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/bronx.jpg" alt="Bronx" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Bronx</h4>
           </div>
@@ -225,7 +226,7 @@
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/paris.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/paris.jpg" alt="Paris" align="middle">
           <div class="carousel-caption">
             <h4 class="city">París</h4>
           </div>
@@ -234,7 +235,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/london.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/london.jpg" alt="Paris" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Londres</h4>
           </div>
@@ -243,7 +244,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/chile.jpg" alt="Chile ctm" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/chile.jpg" alt="Chile ctm" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Chile CTM!</h4>
           </div>
@@ -252,7 +253,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/bronx.jpg" alt="Bronx" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/bronx.jpg" alt="Bronx" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Bronx</h4>
           </div>
@@ -274,7 +275,7 @@
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/paris.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/paris.jpg" alt="Paris" align="middle">
           <div class="carousel-caption">
             <h4 class="city">París</h4>
           </div>
@@ -283,7 +284,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/london.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/london.jpg" alt="Paris" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Londres</h4>
           </div>
@@ -292,7 +293,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/chile.jpg" alt="Chile ctm" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/chile.jpg" alt="Chile ctm" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Chile CTM!</h4>
           </div>
@@ -301,7 +302,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/bronx.jpg" alt="Bronx" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/bronx.jpg" alt="Bronx" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Bronx</h4>
           </div>
@@ -323,7 +324,7 @@
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/paris.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/paris.jpg" alt="Paris" align="middle">
           <div class="carousel-caption">
             <h4 class="city">París</h4>
           </div>
@@ -332,7 +333,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/london.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/london.jpg" alt="Paris" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Londres</h4>
           </div>
@@ -341,7 +342,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/chile.jpg" alt="Chile ctm" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/chile.jpg" alt="Chile ctm" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Chile CTM!</h4>
           </div>
@@ -350,7 +351,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/bronx.jpg" alt="Bronx" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/bronx.jpg" alt="Bronx" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Bronx</h4>
           </div>
@@ -372,7 +373,7 @@
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/paris.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/paris.jpg" alt="Paris" align="middle">
           <div class="carousel-caption">
             <h4 class="city">París</h4>
           </div>
@@ -381,7 +382,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/london.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/london.jpg" alt="Paris" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Londres</h4>
           </div>
@@ -390,7 +391,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/chile.jpg" alt="Chile ctm" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/chile.jpg" alt="Chile ctm" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Chile CTM!</h4>
           </div>
@@ -399,7 +400,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/bronx.jpg" alt="Bronx" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/bronx.jpg" alt="Bronx" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Bronx</h4>
           </div>
@@ -421,7 +422,7 @@
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/paris.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/paris.jpg" alt="Paris" align="middle">
           <div class="carousel-caption">
             <h4 class="city">París</h4>
           </div>
@@ -430,7 +431,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/london.jpg" alt="Paris" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/london.jpg" alt="Paris" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Londres</h4>
           </div>
@@ -439,7 +440,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/chile.jpg" alt="Chile ctm" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/chile.jpg" alt="Chile ctm" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Chile CTM!</h4>
           </div>
@@ -448,7 +449,7 @@
 
       <div class="item">
         <a href="showuser.tpl.html">
-          <img class="iterphoto" src="images/bronx.jpg" alt="Bronx" align="middle">
+          <img class="iterphoto" src="../../resources/imagenes/img_comunidad/bronx.jpg" alt="Bronx" align="middle">
           <div class="carousel-caption">
             <h4 class="city">Bronx</h4>
           </div>
@@ -458,7 +459,7 @@
 
     </div>
     <!--Item 9 end-->
-  </div> 
+  </div>
 </div>
 
 </body>
