--- a/punajut/src/main/webapp/src/evento/verEuropa.html
+++ b/punajut/src/main/webapp/src/evento/verEuropa.html
@@ -19,40 +19,21 @@ and open the template in the editor.
         <script data-require="jquery@*" data-semver="2.1.4" src="https://code.jquery.com/jquery-2.1.4.js"></script>
         <script data-require="bootstrap@3.3.6" data-semver="3.3.6" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
-        <link rel="stylesheet" href="style.css" />
-
-        <link href="resources/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-
-        <script src="resources/js/jquery-1.12.0.min.js" type="text/javascript"></script>
-        <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="resources/js/angular.min.js" type="text/javascript"></script>
-        <script src="resources/js/angular-ui-router.min.js" type="text/javascript"></script>
 
         <!-- Google fonts -->
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
 
         <!-- font awesome -->
-        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-
-        <!-- bootstrap -->
-        <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
 
         <!-- gallery -->
-        <link rel="stylesheet" href="assets/gallery/blueimp-gallery.min.css">
+        <link rel="stylesheet" href="../../resources/assets/gallery/blueimp-gallery.min.css">
 
-        <!-- favicon -->
-        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="assets/style.css">
+        <link rel="stylesheet" href="../../resources/assets/style.css">
         <link rel="stylesheet" href="../../resources/assets/animate/set.css" type="text/css"/>
-        <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" type="text/css">
-        <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" type="text/css"/>
+        <link rel="stylesheet" href="../../resources/css/bootstrap.min.css" type="text/css">
 
-
-
-
-        <script src="script.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-default">
@@ -70,7 +51,7 @@ and open the template in the editor.
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
+                  <!--  <ul class="nav navbar-nav">
 
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Itinerarios <span class="caret"></span></a>
@@ -86,7 +67,7 @@ and open the template in the editor.
                             <input type="text" class="form-control" placeholder="Search">
                         </div>
                         <button type="submit" class="btn btn-default">Go!</button>
-                    </form>
+                    </form> -->
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -107,7 +88,7 @@ and open the template in the editor.
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
             <div class="container">
-                <div class="row profile">
+               <div class="row profile">
                     <div class="col-md-3">
                         <div class="profile-sidebar">
                             <!-- SIDEBAR USERPIC -->
@@ -208,7 +189,8 @@ and open the template in the editor.
                             </figure>
                         </div>
                     </div>
-                </div>
+               </div>
+            </div>
         </nav>
     </body>
 </html>
