boton Itinerario publico

--- a/punajut/src/main/webapp/src/itinerario/itinerarioYmapa.html
+++ b/punajut/src/main/webapp/src/itinerario/itinerarioYmapa.html
@@ -141,12 +141,12 @@ footer{
   </div>
   <div id="filtrar" style="margin:4px; padding:4px">
   Filtrar por precio:   <div class="dropdown">
-      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Precios
         <span class="caret"></span></button>
       <ul class="dropdown-menu">
-        <li><a href="#">HTML</a></li>
-        <li><a href="#">CSS</a></li>
-        <li><a href="#">JavaScript</a></li>
+        <li><a href="#">$100.000 a $200.000</a></li>
+        <li><a href="#">...</a></li>
+
       </ul>
     </div>
   </div>
@@ -162,28 +162,28 @@ footer{
         <div class="panel panel-primary">
           <div class="panel-heading">Evento1</div>
           <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-          <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+          <div class="panel-footer">Te esperamos  <a href="#" class="btn btn-sm btn-info">  <span class="glyphicon glyphicon-plus"></span></a></div>
         </div>
       </div>
       <div class="col-lg-3">
         <div class="panel panel-danger">
           <div class="panel-heading">Evento2</div>
           <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="100%"></div>
-          <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+          <div class="panel-footer">Te esperamos  <a href="#" class="btn btn-sm btn-info">  <span class="glyphicon glyphicon-plus"></span></a></div>
         </div>
       </div>
       <div class="col-lg-3">
         <div class="panel panel-success">
           <div class="panel-heading">Evento3</div>
           <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-          <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+          <div class="panel-footer">Te esperamos  <a href="#" class="btn btn-sm btn-info">  <span class="glyphicon glyphicon-plus"></span></a></div>
         </div>
       </div>
       <div class="col-lg-3">
         <div class="panel panel-success">
-          <div class="panel-heading">Evento3</div>
+          <div class="panel-heading">Evento4</div>
           <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-          <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+          <div class="panel-footer">Te esperamos  <a href="#" class="btn btn-sm btn-info">  <span class="glyphicon glyphicon-plus"></span></a></div>
         </div>
       </div>
 
@@ -194,9 +194,40 @@ footer{
     <div class="row">
       <div class="col-sm-3">
         <div class="panel panel-primary">
+          <div class="panel-heading">Evento5</div>
+          <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+          <div class="panel-footer">Te esperamos  <a href="#" class="btn btn-sm btn-info">  <span class="glyphicon glyphicon-plus"></span></a></div>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div class="panel panel-primary">
+          <div class="panel-heading">Evento6</div>
+          <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+          <div class="panel-footer">Te esperamos  <a href="#" class="btn btn-sm btn-info">  <span class="glyphicon glyphicon-plus"></span></a></div>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div class="panel panel-primary">
+          <div class="panel-heading">Evento7</div>
+          <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+          <div class="panel-footer">Te esperamos  <a href="#" class="btn btn-sm btn-info">  <span class="glyphicon glyphicon-plus"></span></a></div>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="panel panel-success">
+          <div class="panel-heading">Evento3</div>
+          <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+          <div class="panel-footer">Te esperamos  <a href="#" class="btn btn-sm btn-info">  <span class="glyphicon glyphicon-plus"></span></a></div>
+        </div>
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-sm-3">
+        <div class="panel panel-primary">
           <div class="panel-heading">Evento4</div>
           <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-          <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+          <div class="panel-footer">Te esperamos  <a href="#" class="btn btn-sm btn-info">  <span class="glyphicon glyphicon-plus"></span></a></div>
         </div>
       </div>
       <div class="col-sm-3">
@@ -210,53 +241,26 @@ footer{
         <div class="panel panel-primary">
           <div class="panel-heading">Evento6</div>
           <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-          <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+          <div class="panel-footer">Te esperamos  <a href="#" class="btn btn-sm btn-info">  <span class="glyphicon glyphicon-plus"></span></a></div>
         </div>
       </div>
       <div class="col-lg-3">
         <div class="panel panel-success">
           <div class="panel-heading">Evento3</div>
           <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-          <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-        </div>
-      </div>
-    </div>
-    <br>
-    <div class="row">
-      <div class="col-sm-3">
-        <div class="panel panel-primary">
-          <div class="panel-heading">Evento4</div>
-          <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-          <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-        </div>
-      </div>
-      <div class="col-sm-3">
-        <div class="panel panel-primary">
-          <div class="panel-heading">Evento5</div>
-          <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-          <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-        </div>
-      </div>
-      <div class="col-sm-3">
-        <div class="panel panel-primary">
-          <div class="panel-heading">Evento6</div>
-          <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-          <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-        </div>
-      </div>
-      <div class="col-lg-3">
-        <div class="panel panel-success">
-          <div class="panel-heading">Evento3</div>
-          <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-          <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+          <div class="panel-footer">Te esperamos  <a href="#" class="btn btn-sm btn-info">  <span class="glyphicon glyphicon-plus"></span></a></div>
         </div>
       </div>
     </div>
   </div>
   <br>
+   <div class="checkbox">
+  <label><input type="checkbox" value="">Itinerario publico</label>
+</div>
   <br>
-
-
+  <button type="button" class="btn btn-success" style="float:center;">Guardar</button>
+  <br>
+  <br>
 <footer class="container-fluid text-center">
   <p></p>
 </footer>
