--- a/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
@@ -4,7 +4,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html>
+<!--<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,18 +14,18 @@ and open the template in the editor.
         <script data-require="bootstrap@3.3.6" data-semver="3.3.6" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
 
-        <!-- Google fonts -->
+        Google fonts
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
 
-        <!-- font awesome -->
+        <!-- font awesome
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
-        <!-- bootstrap -->
+        <!-- bootstrap
         <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" />
-        <!-- gallery -->
+        <!-- gallery
         <link rel="stylesheet" href="../../resources/assets/gallery/blueimp-gallery.min.css">
 
-        <!-- favicon -->
+        <!-- favicon
         <link rel="stylesheet" href="../../resources/assets/style.css">
         <link rel="stylesheet" href="../../resources/assets/animate/set.css" type="text/css"/>
         <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" type="text/css">
@@ -34,7 +34,8 @@ and open the template in the editor.
 
 
     </head>
-    <body>
+    <body>-->
+        <div ng-init="list = true">
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -168,5 +169,6 @@ and open the template in the editor.
                 </div>
             </div>
         </div>
-    </body>
-</html>
+    </div>
+  <!--  </body>
+</html>-->
