--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -1,72 +1,50 @@
 <!DOCTYPE html>
-<html lang="es-CO">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+<html ng-app="mainApp">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <title>Book Store</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link href="resources/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+        <link href="resources/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <script src="resources/js/bootstrap.js" type="text/javascript"></script>
+        <script src="resources/js/jquery-1.12.0.min.js" type="text/javascript"></script>
+        <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="resources/js/angular.min.js" type="text/javascript"></script>
+        <script src="resources/js/angular-ui-router.min.js" type="text/javascript"></script>
+        <script src="src/app.js" type="text/javascript"></script>
+        <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
+    </head>
+    <body style="padding-top: 60px;">
+        <div class="container-fluid">
+            <div class="col-md-12">
+                <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+                    <div class="container-fluid">
+                        <!-- Brand and toggle get grouped for better mobile display -->
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-bar">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href>Mis Vacaciones</a>
+                        </div>
 
-    <title>Gotravel</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="./resources/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="./resources/css/carousel.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="./resources/css/starter-template.css" rel="stylesheet">
-
-  </head>
-  <body background="w3s.png">
-    <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-      <a href="#" class="navbar-brand">GoTravel</a>
-      <ul class="nav navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#myCarousel">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#resumen">Descripción</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#viaja">Viaja</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#crea">Crea</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#comparte">Comparte</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#signin">Sign in</a>
-        </li>
-      </ul>
-    </nav>
-
-    <!-- Carousel
-    ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active">
-          <img class="first-slide" src="https://www.facua.org/es/images/noticia9515h.jpg" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption text-xs-left">
-              <h1>¡Bienvenido!</h1>
-              <p>¿Que estas esperando? ¡Únete ya y crea experiencias inolvidables!</p>
-              <p><a class="btn btn-lg btn-primary" href="#signup" role="button">Sign up today</a></p>
+                        <!-- Collect the nav links, forms, and other content for toggling -->
+                        <div class="collapse navbar-collapse" id="main-bar">
+                            <ul class="nav navbar-nav">
+                                <li><a ui-sref="itinerario">Escoger continentes</a></li>
+                                <li><a ui-sref="evento">Registrarse</a></li>
+                                <li><a ui-sref="evento">Registrarse</a></li>
+                            </ul>
+                    </div> <!-- /.container-fluid -->
+                    </div>
+                </nav>
             </div>
-          </div>
+            <div ui-view></div>
         </div>
-      </div>
-    </div>
-      </body>
+    </body>
 </html>
