--- a/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
@@ -14,7 +14,7 @@ and open the template in the editor.
         <script data-require="bootstrap@3.3.6" data-semver="3.3.6" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
 
-        Google fonts
+        <!--Google fonts
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
 
         <!-- font awesome
@@ -22,7 +22,7 @@ and open the template in the editor.
 
         <!-- bootstrap
         <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" />
-        <!-- gallery
+        <!-- gallery 
         <link rel="stylesheet" href="../../resources/assets/gallery/blueimp-gallery.min.css">
 
         <!-- favicon
@@ -31,8 +31,6 @@ and open the template in the editor.
         <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" type="text/css">
         <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" type="text/css"/>
         <link rel="stylesheet" href="../../resources/assets/animate/animate.css" type="text/css">
-
-
     </head>
     <body>-->
         <div ng-init="list = true">
