Adelantos en implementacion de modulos

--- a/punajut/src/main/webapp/src/itinerario/verEuropa.html
+++ b/punajut/src/main/webapp/src/itinerario/verEuropa.html
@@ -6,33 +6,29 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <meta charset="utf-8">
+    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Crear Itinerario</title>
         <script data-require="jquery@*" data-semver="2.1.4" src="https://code.jquery.com/jquery-2.1.4.js"></script>
         <script data-require="bootstrap@3.3.6" data-semver="3.3.6" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
-
-
-        <!-- Google fonts -->
+        <!--Google fonts-->
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
 
-        <!-- font awesome -->
+        <!-- font awesome-->
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
-        <!-- bootstrap -->
-        <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" />
+        <!-- bootstrap-->
+        <link href="../../resources/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 
-
-        <!-- gallery -->
+        <!-- gallery-->
         <link rel="stylesheet" href="../../resources/assets/gallery/blueimp-gallery.min.css">
 
+        <!-- favicon-->
         <link rel="stylesheet" href="../../resources/assets/style.css">
         <link rel="stylesheet" href="../../resources/assets/animate/set.css" type="text/css"/>
         <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" type="text/css">
-        <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" type="text/css"/>
-
+        <link rel="stylesheet" href="../../resources/assets/animate/animate.css" type="text/css">
     </head>
     <body>
         <nav class="navbar navbar-inverse">
