--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -5,46 +5,52 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Book Store</title>
+        <title>GoTravel</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link href="resources/css/bootstrap.css" rel="stylesheet" type="text/css"/>
         <link href="resources/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <script src="resources/js/bootstrap.js" type="text/javascript"></script>
         <script src="resources/js/jquery-1.12.0.min.js" type="text/javascript"></script>
         <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
+        <link href="resources/assets/style.css" rel="stylesheet" type="text/css"/>
         <script src="resources/js/angular.min.js" type="text/javascript"></script>
         <script src="resources/js/angular-ui-router.min.js" type="text/javascript"></script>
         <script src="src/app.js" type="text/javascript"></script>
         <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" type="text/css">
+
     </head>
-    <body style="padding-top: 60px;">
+    <body>
+
         <div class="container-fluid">
-            <div class="col-md-12">
-                <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-                    <div class="container-fluid">
-                        <!-- Brand and toggle get grouped for better mobile display -->
+                <nav class="navbar navbar-inverse">
+                    <div class="navbar-header">
+
                         <div class="navbar-header">
-                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-bar">
-                                <span class="sr-only">Toggle navigation</span>
+                            <a class="navbar-brand" href="#">GoTravel</a>
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href>Mis Vacaciones</a>
+                        </div>
+                        <div class="collapse navbar-collapse" id="myNavbar">
+                            <ul class="nav navbar-nav">
+                                <li><a ui-sref="verContinentes">Itinerarios</a></li>
+                                <li><a ui-sref="evento">Recordatorios</a></li>
+                                <li><a ui-sref="evento">Ajustes</a></li>
+                            </ul>
+                            <ul class="nav navbar-nav navbar-right">
+                                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> LogOut</a></li>
+                            </ul>
                         </div>
 
-                        <!-- Collect the nav links, forms, and other content for toggling -->
-                        <div class="collapse navbar-collapse" id="main-bar">
-                            <ul class="nav navbar-nav">
-                                <li><a ui-sref="itinerario">Escoger continentes</a></li>
-                                <li><a ui-sref="evento">Registrarse</a></li>
-                                <li><a ui-sref="evento">Registrarse</a></li>
-                            </ul>
-                    </div> <!-- /.container-fluid -->
                     </div>
+                    <div ui-view></div>
                 </nav>
+
             </div>
-            <div ui-view></div>
+
         </div>
     </body>
 </html>
