--- a/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
@@ -3,8 +3,7 @@
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
--->
-<!--<html>
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,14 +21,13 @@ and open the template in the editor.
 
         <!-- bootstrap
         <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" />
-        <!-- gallery 
+        <!-- gallery
         <link rel="stylesheet" href="../../resources/assets/gallery/blueimp-gallery.min.css">
 
         <!-- favicon
         <link rel="stylesheet" href="../../resources/assets/style.css">
         <link rel="stylesheet" href="../../resources/assets/animate/set.css" type="text/css"/>
         <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" type="text/css">
-        <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" type="text/css"/>
         <link rel="stylesheet" href="../../resources/assets/animate/animate.css" type="text/css">
     </head>
     <body>-->
@@ -168,5 +166,5 @@ and open the template in the editor.
             </div>
         </div>
     </div>
-  <!--  </body>
-</html>-->
+   </body>
+</html>
