--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -6,23 +6,42 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>GoTravel</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link href="resources/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-        <link href="resources/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <script data-require="jquery@*" data-semver="2.1.4" src="https://code.jquery.com/jquery-2.1.4.js"></script>
+        <script data-require="bootstrap@3.3.6" data-semver="3.3.6" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
+       <!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">-->
+
+
+        <!--Google fonts-->
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
+
+        <!-- font awesome-->
+        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+        <!-- bootstrap-->
+        <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" />
+        <!-- gallery-->
+        <link rel="stylesheet" href="../../resources/assets/gallery/blueimp-gallery.min.css">
+
+
         <script src="resources/js/bootstrap.js" type="text/javascript"></script>
         <script src="resources/js/jquery-1.12.0.min.js" type="text/javascript"></script>
         <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
-        <link href="resources/assets/style.css" rel="stylesheet" type="text/css"/>
         <script src="resources/js/angular.min.js" type="text/javascript"></script>
         <script src="resources/js/angular-ui-router.min.js" type="text/javascript"></script>
         <script src="src/app.js" type="text/javascript"></script>
         <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
+
+        <link rel="stylesheet" href="../../resources/assets/style.css">
+        <link rel="stylesheet" href="../../resources/assets/animate/set.css" type="text/css"/>
         <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" type="text/css">
+        <link rel="stylesheet" href="../../resources/assets/animate/animate.css" type="text/css">
 
     </head>
     <body>
 
         <div class="container-fluid">
+            <div class="col-md-12">
                 <nav class="navbar navbar-inverse">
                     <div class="navbar-header">
 
@@ -48,9 +67,8 @@
                     </div>
                     <div ui-view></div>
                 </nav>
-
             </div>
-
         </div>
+        
     </body>
 </html>
