--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -9,8 +9,7 @@
         <script data-require="jquery@*" data-semver="2.1.4" src="https://code.jquery.com/jquery-2.1.4.js"></script>
         <script data-require="bootstrap@3.3.6" data-semver="3.3.6" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
-       <!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">-->
-
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
         <!--Google fonts-->
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
@@ -19,10 +18,19 @@
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
         <!-- bootstrap-->
-        <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" />
-        <!-- gallery-->
-        <link rel="stylesheet" href="../../resources/assets/gallery/blueimp-gallery.min.css">
+        <link href="resources/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 
+        <!-- gallery-->
+        <link href="resources/assets/gallery/blueimp-gallery.min.css" rel="stylesheet" type="text/css"/>
+
+        <!-- animate-->
+        <link href="resources/assets/animate/animate.css" rel="stylesheet" type="text/css"/>
+
+        <!-- animate set -->
+        <link href="resources/assets/animate/set.css" rel="stylesheet" type="text/css"/>
+
+        <!-- style-->
+        <link href="resources/assets/style.css" rel="stylesheet" type="text/css"/>
 
         <script src="resources/js/bootstrap.js" type="text/javascript"></script>
         <script src="resources/js/jquery-1.12.0.min.js" type="text/javascript"></script>
@@ -32,43 +40,46 @@
         <script src="src/app.js" type="text/javascript"></script>
         <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
 
-        <link rel="stylesheet" href="../../resources/assets/style.css">
-        <link rel="stylesheet" href="../../resources/assets/animate/set.css" type="text/css"/>
-        <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" type="text/css">
-        <link rel="stylesheet" href="../../resources/assets/animate/animate.css" type="text/css">
+        <!--<link rel="stylesheet" href="../../resources/assets/style.css">-->
+
+        <link rel="stylesheet" href="resources/assets/bootstrap/css/bootstrap.min.css" type="text/css">
+
 
     </head>
     <body>
-
         <div class="container-fluid">
             <div class="col-md-12">
-                <nav class="navbar navbar-inverse">
-                    <div class="navbar-header">
+                <nav class="navbar navbar-inverse" role="navigation">
 
+                    <div class="container-fluid">
                         <div class="navbar-header">
-                            <a class="navbar-brand" href="#">GoTravel</a>
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                        </div>
-                        <div class="collapse navbar-collapse" id="myNavbar">
-                            <ul class="nav navbar-nav">
-                                <li><a ui-sref="verContinentes">Itinerarios</a></li>
-                                <li><a ui-sref="evento">Recordatorios</a></li>
-                                <li><a ui-sref="evento">Ajustes</a></li>
-                            </ul>
-                            <ul class="nav navbar-nav navbar-right">
-                                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> LogOut</a></li>
-                            </ul>
-                        </div>
 
+                            <div class="navbar-header">
+                                <a class="navbar-brand" href="#">GoTravel</a>
+                                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                </button>
+                            </div>
+                            </div>
+                            <div class="collapse navbar-collapse" id="main-bar">
+                                <ul class="nav navbar-nav">
+                                    <li><a ui-sref="verContinentes">Itinerarios</a></li>
+                                    <li><a ui-sref="evento">Recordatorios</a></li>
+                                    <li><a ui-sref="evento">Ajustes</a></li>
+                                </ul>
+                                <ul class="nav navbar-nav navbar-right">
+                                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> LogOut</a></li>
+                                </ul>
+                            </div>
+
+                        </div>
                     </div>
                     <div ui-view></div>
                 </nav>
             </div>
         </div>
-        
+
     </body>
 </html>
