--- a/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
@@ -109,7 +109,8 @@ and open the template in the editor.
                 <div class="col-md-9">
                     <div id="works"  class=" clearfix grid">
                           <figure class="effect-oscar  wowload fadeIn">
-                            <img src="../../resources/imagenes/Oceania.jpg" alt="img01"/>
+
+                            <img src="resources/imagenes/Oceania.jpg" alt="oceania"/>
                             <figcaption>
                                 <h2>Oceania</h2>
                                 <p>???<br>
@@ -119,15 +120,15 @@ and open the template in the editor.
 
 
                         <figure class="effect-oscar  wowload fadeIn">
-                            <img src="../../resources/imagenes/Europa.jpg" alt="img01"/>
+                            <img src="resources/imagenes/Europa.jpg" alt="img01"/>
                             <figcaption>
                                 <h2>Europa</h2>
                                 <p>La cuna de la civilizacion occidental<br>
-                                    <a href="../../src/itinerario/verEuropa.html" title="1" data-gallery>Mas</a></p>
+                                    <a href="src/itinerario/verEuropa.html" title="1" data-gallery>Mas</a></p>
                             </figcaption>
                         </figure>
                          <figure class="effect-oscar  wowload fadeIn">
-                            <img src="../../resources/imagenes/Asia.jpg" alt="img01"/>
+                            <img src="resources/imagenes/Asia.jpg" alt="img01"/>
                             <figcaption>
                                 <h2>Asia</h2>
                                 <p>Viaja por la maravillosa tierra oriental<br>
@@ -136,7 +137,7 @@ and open the template in the editor.
                         </figure>
 
                         <figure class="effect-oscar  wowload fadeIn">
-                            <img src="../../resources/imagenes/North America.jpg" alt="img01"/>
+                            <img src="resources/imagenes/North America.jpg" alt="img01"/>
                             <figcaption>
                                 <h2>Norte America</h2>
                                 <p>???<br>
@@ -145,7 +146,7 @@ and open the template in the editor.
                         </figure>
 
                         <figure class="effect-oscar  wowload fadeIn">
-                            <img src="../../resources/imagenes/Africa.jpg" alt="img01"/>
+                            <img src="resources/imagenes/Africa.jpg" alt="img01"/>
                             <figcaption>
                                 <h2>Africa</h2>
                                 <p>Disfruta de la naturaleza en su maximo esplendor<br>
@@ -153,7 +154,7 @@ and open the template in the editor.
                             </figcaption>
                         </figure>
                         <figure class="effect-oscar  wowload fadeIn">
-                            <img src="../../resources/imagenes/Latinoamerica.png" alt="img01"/>
+                            <img src="resources/imagenes/Latinoamerica.png" alt="img01"/>
                             <figcaption>
                                 <h3>Latinoamerica</h3>
                                 <p>Viaja!!<br>
@@ -166,5 +167,4 @@ and open the template in the editor.
             </div>
         </div>
     </div>
-   </body>
-</html>
+
