--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -9,10 +9,9 @@
         <title>GoTravel</title>
         <script data-require="jquery@*" data-semver="2.1.4" src="https://code.jquery.com/jquery-2.1.4.js"></script>
         <script data-require="bootstrap@3.3.6" data-semver="3.3.6" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-        <!--Dependencias de bootstrap-->
+        <!--Bootstrap-->
         <link href="resources/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 
         <!--Google fonts-->
@@ -21,9 +20,7 @@
         <!-- font awesome-->
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
-        <!-- bootstrap-->
-        <link href="resources/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <!--<link href="resources/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>-->
+        <!--Dependencias bootstrap-->
         <script src="resources/js/jquery-1.12.0.min.js" type="text/javascript"></script>
         <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
 
@@ -36,11 +33,6 @@
         <!-- animate set -->
         <link href="resources/assets/animate/set.css" rel="stylesheet" type="text/css"/>
 
-        <!-- style-->
-        <link href="resources/assets/style.css" rel="stylesheet" type="text/css"/>
-
-
-
 
         <!--AngularJS-->
         <script src="resources/js/angular.min.js" type="text/javascript"></script>
@@ -49,8 +41,6 @@
         <!--Carga el modulo creado-->
         <script src="src/app.js" type="text/javascript"></script>
 
-
-        <link href="resources/assets/style.css" rel="stylesheet" type="text/css"/>
 
         <!--Recuerdos-->
         <script src="resources/js/traffic.js"></script>
@@ -63,7 +53,6 @@
         <div class="container-fluid">
             <div class="col-md-12">
                 <nav class="navbar navbar-inverse" role="navigation">
-
                     <div class="container-fluid">
                         <div class="navbar-header">
                             <a class="navbar-brand" href="#">GoTravel</a>
@@ -73,6 +62,7 @@
                                 <span class="icon-bar"></span>
                             </button>
                         </div>
+
                         <div class="collapse navbar-collapse" id="myNavbar">
                             <ul class="nav navbar-nav">
                                 <li><a ui-sref="verContinentes">Itinerarios</a></li>
@@ -84,10 +74,12 @@
                                 <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> LogOut</a></li>
                             </ul>
                         </div>
+                    </div>
+                            </nav>
 
-                        </div>
-                    <div ui-view></div>
-                </nav>
             </div>
-    </body>
+            <div ui-view></div>
+    </div>
+
+</body>
 </html>
