--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -5,19 +5,27 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
         <title>GoTravel</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link href="resources/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+
+        <!--Dependencias de bootstrap-->
         <link href="resources/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <script src="resources/js/bootstrap.js" type="text/javascript"></script>
-        <script src="resources/js/jquery-1.12.0.min.js" type="text/javascript"></script>
         <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
-        <link href="resources/assets/style.css" rel="stylesheet" type="text/css"/>
+        <script src="resources/js/jquery-1.12.0.min.js" type="text/javascript"></script>
+
+        <!--AngularJS-->
         <script src="resources/js/angular.min.js" type="text/javascript"></script>
         <script src="resources/js/angular-ui-router.min.js" type="text/javascript"></script>
+
+        <!--Carga el modulo creado-->
         <script src="src/app.js" type="text/javascript"></script>
-        <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
-        <link rel="stylesheet" href="../../resources/assets/bootstrap/css/bootstrap.min.css" type="text/css">
+
+        <link href="resources/assets/style.css" rel="stylesheet" type="text/css"/>
+
+        <!--Recuerdos-->
+        <script src="resources/js/traffic.js"></script>
+        <script src="resources/js/imgcrr.js"></script>
 
     </head>
     <body>
@@ -39,18 +47,15 @@
                                 <li><a ui-sref="verContinentes">Itinerarios</a></li>
                                 <li><a ui-sref="evento">Recordatorios</a></li>
                                 <li><a ui-sref="evento">Ajustes</a></li>
+                                <li><a ui-sref="crearRecuerdo">Recuerdos</a></li>
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> LogOut</a></li>
                             </ul>
                         </div>
-
                     </div>
                     <div ui-view></div>
                 </nav>
-
             </div>
-
-        </div>
     </body>
 </html>
