--- a/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
@@ -32,7 +32,7 @@ and open the template in the editor.
     </head>
     <body>-->
         <div ng-init="list = true">
-        <nav class="navbar navbar-inverse">
+        <!--<nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">GoTravel</a>
@@ -55,7 +55,7 @@ and open the template in the editor.
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav>-->
         <div class="container">
             <div class="row profile">
                 <div class="col-md-3">
@@ -166,5 +166,3 @@ and open the template in the editor.
             </div>
         </div>
     </div>
-   </body>
-</html>
