--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -57,9 +57,13 @@
         <script src="resources/js/imgcrr.js"></script>
 
         <!--timeline-->
-        <script src="resources/js/jquery.timelinr-0.9.54.js"></script>
-        <link href="resources/css/timeline.css" rel="stylesheet"  property='stylesheet' type="text/css"/>
-
+     <!--   <script src="resources/js/jquery.timelinr-0.9.54.js"></script>
+        <link href="resources/css/timeline.css" rel="stylesheet"  property='stylesheet' type="text/css"/>-->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.14.0/vis.min.js"></script>
+     <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.14.0/vis.min.css" rel="stylesheet" type="text/css" />-->
+     <script src="resources/js/timeline.js" type="text/javascript"></script>
+     <script src="resources/js/vis.min.js" type="text/javascript"></script>
+     <link href="resources/css/vis.min.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <div class="container-fluid">
